--- a/hirmumaja/test.html
+++ b/hirmumaja/test.html
@@ -1,94 +1,25 @@
-<!DOCTYPE html>
+<!doctype html>
 <html lang="en">
 <head>
     <meta charset="UTF-8">
-    <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Просмотр билета</title>
+    <meta name="viewport"
+          content="width=device-width, user-scalable=no, initial-scale=1.0, maximum-scale=1.0, minimum-scale=1.0">
+    <meta http-equiv="X-UA-Compatible" content="ie=edge">
+    <title>Document</title>
+
     <style>
-        body {
-            font-family: Arial, sans-serif;
-            background-color: #f7f7f7;
-            color: #333;
-            margin: 0;
-            padding: 0;
+        .textured-background {
+            background-image: url('pildid/scary.jpeg');
         }
 
-        .ticket-container {
-            max-width: 600px;
-            margin: 50px auto;
-            background-color: #fff;
-            border-radius: 10px;
-            padding: 30px;
-            box-shadow: 0 0 20px rgba(0, 0, 0, 0.1);
-        }
-
-        .ticket-header {
-            text-align: center;
-            margin-bottom: 20px;
-        }
-
-        .ticket-header h1 {
-            font-size: 32px;
-            color: #333;
-        }
-
-        .ticket-description {
-            text-align: center;
-            margin-bottom: 30px;
-        }
-
-        .ticket-description p {
-            font-size: 18px;
-        }
-
-        .ticket-info {
-            display: flex;
-            justify-content: space-between;
-            align-items: center;
-            padding: 15px 0;
-            border-top: 1px solid #ccc;
-            border-bottom: 1px solid #ccc;
-            margin-bottom: 20px;
-        }
-
-        .ticket-info span {
-            font-size: 16px;
-        }
-
-        .ticket-icon {
-            width: 50px;
-            height: 50px;
-            border-radius: 50%;
-            background-color: #ff6600;
-            display: flex;
-            justify-content: center;
-            align-items: center;
-            color: #fff;
-            font-size: 24px;
-        }
     </style>
+
+    <div class="textured-background">
+
+    </div>
+
 </head>
 <body>
-
-<div class="ticket-container">
-    <div class="ticket-header">
-        <h1>Билет на парк аттракционов</h1>
-    </div>
-    <div class="ticket-description">
-        <p>С включенным доступом ко всем аттракционам парка в течение дня!</p>
-    </div>
-    <div class="ticket-info">
-        <span>Дата: 25 марта 2024</span>
-        <span>Время: 10:00 - 20:00</span>
-    </div>
-    <div class="ticket-info">
-        <span>Место: Парк аттракционов "Веселый ковбой"</span>
-    </div>
-    <div class="ticket-info">
-        <span>Цена: $25</span>
-        <div class="ticket-icon">+</div>
-    </div>
-</div>
 
 </body>
 </html>
